# progonitelj

./: .editorconfig  .gitignore  .mise.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .progonitelj.yaml  Dockerfile  README.md  composer.json  go.mod  justfile  package.json  pyproject.toml  requirements.md  requirements.txt  vendir.yml
.github/ISSUE_TEMPLATE/: package-request.yml
.github/workflows/: example-check.yml  progoni.yml
examples/docker/: Dockerfile  Dockerfile.bad
examples/go-app/: go.mod
examples/npm-app/: package.json
examples/php-app/: composer.json
examples/python-app/: requirements-bad.txt  requirements.txt
policies/: docker.yaml  go.yaml  npm.yaml  php.yaml  python.yaml
src/progonitelj/: __init__.py  cli.py  policy.py  scanner.py
src/progonitelj/validators/: __init__.py  base.py  docker.py  golang.py  npm.py  php.py  python.py
